--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,11 @@
         }
     },
     "require": {
-        "php": ">=8.0"
+        "php": ">=8.0",
+        "league/route": "^6.2",
+        "laminas/laminas-diactoros": "^3.8",
+        "laminas/laminas-httphandlerrunner": "^2.13",
+        "league/container": "^5.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
